--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <body>
         <h1> CSMPhoto </h1> <br>
 
+        <img src="ricccc.gif" alt="Italian Trulli">
+
         <br>
         <nav> 
             <ul>
