added ricc part2

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     </head>
     <body>
         <h1> CSMPhoto </h1> <br>
-
-        <img src="ricccc.gif" alt="Italian Trulli">
+        <img src="Ricccc.gif">
 
         <br>
         <nav> 
