rekt text added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     </head>
     <body>
         <h1> CSMPhoto </h1> <br>
-        <img src="Ricccc.gif">
+        <img src="Ricccc.gif"> <br>
+        <p> You have been omega rick rolled lmao get rekt </p>
 
         <br>
         <nav> 
